apps/intern/src/components/Beregning/Beregning.module.css
.beregning {
	flex: 1;
	background-color: var(--a-bg-subtle);
	padding: var(--ax-space-48);
	box-sizing: border-box;
	overflow-y: auto;
}

.tables {
	display: flex;
	gap: var(--ax-space-40);
}

.tables > * {
	flex: 1;
}

.tableRow {
	align-items: flex-start;
}

.loadingOverlay {
	position: relative;
}

.loadingOverlay::after {
	content: '';
	position: absolute;
	inset: 0;
	background-color: rgba(255, 255, 255, 0.6);
	z-index: 1;
}

.overlayLoader {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 2;
}

.loader {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
}

.globalAlert {
	margin: calc(-1 * var(--ax-space-48));
	margin-bottom: var(--ax-space-48);
}

